# scrapy-boilerplate

./: pyproject.toml
boilerplate/: scrapy.cfg
boilerplate/boilerplate/: items.py  middlewares.py  pipelines.py  settings.py
