[tool.poetry]
name = "scrapy-boilerplate"
version = "0.1.0"
description = ""
authors = ["y00njae <rladbswo12@gist.ac.kr>"]
readme = "README.md"
packages = [{include = "scrapy_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
